# polarbayes

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  ruff.toml  zensical.toml
.github/actions/: setup-polarbayes.yaml
.github/actions/setup-polarbayes/: action.yaml
.github/workflows/: test.yaml  website.yaml
docs/: index.md  quickstart_for_tidybayes_users.md
polarbayes/: gather.py  schema.py  spread.py
test/: test_gather.py  test_schema.py  test_spread.py
