[project]
name = "polarbayes"
version = "0.1.0"
description = "Process Bayesian inference output with arviz and polars"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "polars>=1.31.0",
    "xarray>=2025.10",
]

license = "Apache-2.0"

[dependency-groups]
dev = [
  {include-group = "docs"},
  {include-group = "test"}
]

docs = [
    "markdown-callouts>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "ruff>=0.12.12",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
